nodeChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app: nodeapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: 890927215245.dkr.ecr.us-east-1.amazonaws.com/suleyman-assign-repo:latest
        ports:
        - containerPort: 80
