nodeChart/templates/servicenodeapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  annotations: 
    alb.ingress.kubernetes.io/healthcheck-path: /nodeapp
spec:
  type: NodePort
  selector:
    app: nodeapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
